# VelikieProgera

./: CMakeLists.txt  README.md  vcpkg.json
discipline/algorithmsDataStructures/: option_2.c
discipline/algorithmsDataStructures/laba1/: option-19.c  option.c
discipline/algorithmsDataStructures/laba2/: option_14.c  option_2.c
discipline/algorithmsDataStructures/laba3/: main  option_19  option_19.c
discipline/algorithmsDataStructures/laba4/: .option_19.c.swo  input.txt  option_19  option_19.c  option_Egoric  option_Egoric.c
discipline/computerGraphics/laba1/: .option_1.cpp.swo  option_1.cpp  transform_app
discipline/computerGraphics/laba2/: .option_1.cpp.swp  option_1.cpp  option_19  option_19.cpp  option_2.cpp
discipline/computerGraphics/laba3/: option_2.cpp
discipline/programmingBasics/laba1/: Laba1.4(Artem).c  option_10.c  option_19.c
discipline/programmingBasics/laba2/: Test.txt  opition_20.c  option-20.c  option_19  option_19.c  option_2.c  option_4.c  output.txt
discipline/programmingBasics/laba3/: .option_19.c.swp  input.txt  kjfsdhfojs.cpp  option_10.c  option_19  option_19.c  option_2.c  output.txt
discipline/programmingBasics/laba4/: input.txt  option.c  option_19  option_19.c  option_4.c
test/: test_c.c  test_cpp.cpp  test_gui.cpp
